# denis_unified_v1

./: --out-json  .codeiumignore  .env  .env.p13.example  .env.phase0.example  .env.sprint.providers.example  .gitignore  AGENTS.md  AUDITORIA_COMPLETA.md  AUDITORIA_GRAFOCENTRICA.md  DAILY_TODO.md  DENIS_BASELINE.md  DENIS_METACOGNITIVE_PROJECT.md  DENIS_METACOGNITIVE_ROADMAP.md  ESTADO_DEL_PROYECTO.md  MCPboost.json  METACOGNITIVE_BACKLOG.md  MIGRATION_MAP.md  Makefile  OBSERVABILIDAD.md  PARTE_F_ENTREGABLES.md  PHASE10_GATE_HARDENING.md  PHASE12_SMX_STATUS.md  README.md  REFLEXION_RECENTRADO.md  REFRACTOR_PHASED_TODO.md  RUNBOOK_AUDIO_LOCAL.md  SMX_INTEGRATION_PLAN.md  SPRINT_AUTOMATION.md  SPRINT_PROVIDER_LOAD.md  SPRINT_REVIEW_CHECKLIST.md  SUPERPROMPT_GRAFOCENTRICO_DETALLADO.md  SUPERPROMPT_RECENTRADO.md  TODO.md  __init__.py  auto_evaluation.py  baseline_report.json  capabilities_service.py  code_generation.py  denis_agent_heart.py  (+44 more)
.githooks/: pre-push
.opencode/: denis_godmode.json
.windsurf/: hooks.json
api/: __init__.py  agent_heart_api.py  api_registry.py  event_bus.py  fastapi_server.py  graph_freshness.py  healthz.py  memory_handler.py  metacognitive_api.py  middleware_api.py  models.py  openai_compatible.py  openai_compatible_broken.py  provider_config_handler.py  query_interface.py  sse_handler.py  start_server.py  telemetry_store.py  voice_handler.py  websocket_handler.py
artifacts/: boot_import_smoke.json  legacy_imports_smoke.json  observability_smoke.json  openai_router_smoke.json  smoke_all.json  work_compiler_smoke.json
autopoiesis/: __init__.py  approval_engine.py  behavior_handbook.py  capability_detector.py  extension_generator.py  proposal_engine.py  self_extension_engine.py
config/: multi_node_architecture.md  quantum_mapping.yaml
contracts/: README.md  async_loader.py  level0_constitution.yaml  level1_topology.yaml  level2_adaptive.yaml  level3_cognitive_router.yaml  level3_emergent.yaml  level3_inference_router.yaml  level3_memory_neuroplastic.yaml  level3_metacognitive.yaml  level3_self_extension.yaml  level3_sprint_orchestrator.yaml  level3_voice_pipeline.yaml  registry.yaml
control_plane/: __init__.py  agent_result_writer.py  ai_consult.py  approval_popup.py  cp_generator.py  cp_queue.py  human_input_processor.py  intent_queue_app.py  models.py  precise_router.py  repo_context.py  slm_router.py
control_room/: __init__.py  runner.py
cortex/: config_resolver.py  entity_registry.py  metacognitive_perception.py  neo4j_config_resolver.py  world_interface.py
denis_unified_v1/: __init__.py  budgets.py  cognitive_integration.py  connections.py  feature_flags.py  rate_limiting.py  roadmap_synthesizer.py
denisunifiedv1/: __init__.py  featureflags.py
deploy/: denis-harvester.service  deployment_playbook.md  gotchas_addressed.md  (+1 more)
(+1174 files in other folders)
